--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <div id="ab" class="aboutme">
         <div class="profile">
-            <img id="profile-pic" src="imageS/MYPIC2.jpeg" alt="">
+            <img id="profile-pic" src="images/MYPIC2.jpeg" alt="">
             <h2 style="padding-top: 50px;">Who am i??</h2>
             <p>I have the courage to believe that Matters.I have the strength to make a Difference..to be Different.
                 I just aim to improve,to be better than I was before. I am innovative girl with great ideas.
